--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Convert files without losing quality. Runs entirely in your browser." />
-  <title>CONVERT v1.5</title>
+  <title>CONVERT v1.6</title>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link href="https://fonts.googleapis.com/css2?family=DM+Mono:wght@400;500&family=Instrument+Serif:ital@0;1&family=Geist:wght@300;400;500;600&display=swap" rel="stylesheet" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
@@ -635,7 +635,7 @@
 </div>
 
 <header>
-  <div class="logo">CONVERT<span>·</span> <span style="color:var(--ink-light);font-weight:400;">v1.5</span></div>
+  <div class="logo">CONVERT<span>·</span> <span style="color:var(--ink-light);font-weight:400;">v1.6</span></div>
   <div class="header-meta">Client-side · Private · No upload</div>
 </header>
 
@@ -657,18 +657,17 @@
     </div>
     <div class="drop-title">Drop files here</div>
     <div class="drop-sub">Images · PDFs · Documents · Text — any format</div>
-    <div style="display:flex;gap:10px;justify-content:center;flex-wrap:wrap;">
+    <div style="display:flex;flex-direction:column;align-items:center;gap:12px;">
       <button class="btn-browse" onclick="document.getElementById('file-input-photos').click()">
         <svg width="11" height="11" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><rect x="3" y="3" width="18" height="18" rx="2"/><circle cx="8.5" cy="8.5" r="1.5"/><polyline points="21 15 16 10 5 21"/></svg>
-        Photos & Images
+        Choose files
       </button>
-      <button class="btn-browse" onclick="document.getElementById('file-input-files').click()">
-        <svg width="11" height="11" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M3 3h6l2 3h10a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1z"/></svg>
-        Files & Docs
+      <button onclick="document.getElementById('file-input-files').click()" style="background:none;border:none;font-family:'DM Mono',monospace;font-size:11px;color:var(--ink-light);cursor:pointer;letter-spacing:0.08em;text-decoration:underline;">
+        Browse Files app instead
       </button>
     </div>
-    <input type="file" id="file-input-photos" multiple accept="image/*" />
-    <input type="file" id="file-input-files" multiple accept="*/*" />
+    <input type="file" id="file-input-photos" multiple accept="image/*" style="display:none" />
+    <input type="file" id="file-input-files" multiple accept="*/*" style="display:none" />
   </div>
 
   <div id="queue"></div>
@@ -916,10 +915,18 @@ dz.addEventListener('drop', e => {
 
 function wireInput(id, source) {
   const el = document.getElementById(id);
-  el.addEventListener('change', () => {
+  // Use both change and input events for iOS reliability
+  const handler = () => {
+    if (!el.files || el.files.length === 0) {
+      logError('—', source, 'Picker closed with 0 files selected');
+      return;
+    }
     receiveFiles(el.files, source);
-    el.value = '';
-  });
+    // Reset so same file can be selected again
+    setTimeout(() => { el.value = ''; }, 100);
+  };
+  el.addEventListener('change', handler);
+  el.addEventListener('input', handler);
 }
 
 wireInput('file-input-photos', 'photos-picker');
