--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Convert files without losing quality. Runs entirely in your browser." />
-  <title>CONVERT v1.6</title>
+  <title>CONVERT v1.7</title>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link href="https://fonts.googleapis.com/css2?family=DM+Mono:wght@400;500&family=Instrument+Serif:ital@0;1&family=Geist:wght@300;400;500;600&display=swap" rel="stylesheet" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
@@ -635,7 +635,7 @@
 </div>
 
 <header>
-  <div class="logo">CONVERT<span>·</span> <span style="color:var(--ink-light);font-weight:400;">v1.6</span></div>
+  <div class="logo">CONVERT<span>·</span> <span style="color:var(--ink-light);font-weight:400;">v1.7</span></div>
   <div class="header-meta">Client-side · Private · No upload</div>
 </header>
 
@@ -917,13 +917,15 @@ function wireInput(id, source) {
   const el = document.getElementById(id);
   // Use both change and input events for iOS reliability
   const handler = () => {
-    if (!el.files || el.files.length === 0) {
-      logError('—', source, 'Picker closed with 0 files selected');
-      return;
-    }
-    receiveFiles(el.files, source);
-    // Reset so same file can be selected again
-    setTimeout(() => { el.value = ''; }, 100);
+    // Small delay for iOS — file list sometimes isn't populated yet when change fires
+    setTimeout(() => {
+      if (!el.files || el.files.length === 0) {
+        logError('—', source, 'Picker closed with 0 files selected');
+        return;
+      }
+      receiveFiles(el.files, source);
+      setTimeout(() => { el.value = ''; }, 100);
+    }, 50);
   };
   el.addEventListener('change', handler);
   el.addEventListener('input', handler);
